2000-06-04 09:20 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
*utils/hbdoc/hbdoc.prg
        *Added code to support .CHM source code generation
*utils/hbdoc/html.prg
        +Newchm(),Addobject(),addparam(),Newcontent(),Endobject() method
for .chm support
+utils/hbdoc/genchm.prg
        *Source code to generate .CHM source files
*makefile.bc
        +genchm.prg entry added to the make file

2000-06-04 17:52 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * tests/setkeys.prg
     ! Changed to reflect setkey function changes.

2000-06-04 13:55 UTC+0100 Antonio Linares <alinares@fivetech.com>
   * include/hbclass.ch
      * Some minor fixes

2000-06-04 03:35 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
   * source/pp/ppcore.c
     * Commented fix 2000-06-02 14:45 UTC-0800 Ron Pinkas <Ron@Profit-Master.com> until more complete solution

2000-06-04 03:30 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
   * source/pp/ppcore.c
     * Corrected error message in SetRules() to report filename with default extension.

2000-06-04 03:25 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
   * source/pp/ppcore.c
     * Added \n to error message in SetRules()

2000-06-04 03:05 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>

   * include/hbcomp.h
     + Added: extern char *        hb_pp_STD_CH;

   * include/hbpp.h
     + Added: extern void hb_pp_SetRules( BOOL (*hb_compInclude)(char *, PATHNAMES * ) );

   * source/compiler/hbusage.c
   * source/compiler/harbour.c
   * source/compiler/cmdcheck.c
     + Added support for -u[FileName]
     - Removed TODO for -u

   * source/pp/ppcomp.c
     + Added hb_pp_ReadRules() - Logic to process directives from user supplied command defs.

   * source/pp/ppcore.c
     + Added hb_pp_SetRules() - Logic to use predefined rules, none, or user defined.

   * source/pp/pptable.c
     + Added hb_pp_Table() - Moved predefined rules into this function, to allow for conditional use.

2000-06-03 13:36 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * makefile.bc