@@ -1,3 +1,7 @@
+2000-06-04 09:40 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
+   * source/pp/ppcore.c
+     * Changed case of '@' in hb_pp_RdStr() to only add missing space when in the begining of a new line.
+
 2000-06-04 09:20 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
 *utils/hbdoc/hbdoc.prg
         *Added code to support .CHM source code generation
